Mejora premium de PWA: visibilidad de instalaciÃ³n, splash screen oscuro, versiÃ³n v1.0 y unificaciÃ³n de logo .jpg

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,19 @@
 {
-  "name": "IDMJI Gestor de Púlpito",
-  "short_name": "IDMJI Púlpito",
+  "name": "IDMJI Sabadell",
+  "short_name": "IDMJI Sabadell",
   "description": "Gestión de cultos y púlpito para IDMJI Sabadell",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#4A90E2",
-  "theme_color": "#4A90E2",
+  "background_color": "#1e293b",
+  "theme_color": "#1e293b",
   "icons": [
     {
-      "src": "/logo.jpeg",
+      "src": "/logo.jpg",
       "sizes": "192x192 512x512",
       "type": "image/jpeg",
       "purpose": "any maskable"
     }
   ]
 }
+`,file_path:
